// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`injects {foo: 'bar'} into window['__CUSTOM_INJECTED'] 1`] = `
[
  {
    "html": "<!DOCTYPE html><html><head>
  <title>Prerenderer Test: Injection with custom name</title>
</head>
<body>
  <script>
    document.addEventListener('DOMContentLoaded', () => {
      document.body.innerHTML += \`<p>\${JSON.stringify(window['__CUSTOM_INJECTED'])}</p>\`
    })
  </script>


<p>{"foo":"bar"}</p></body></html>",
    "originalRoute": "/",
    "route": "/",
  },
]
`;

exports[`injects {foo: 'bar'} into window['__PRERENDER_INJECTED'] 1`] = `
[
  {
    "html": "<!DOCTYPE html><html><head>
  <title>Prerenderer Test: Basic Injection</title>
</head>
<body>
  <script>
    document.addEventListener('DOMContentLoaded', () => {
      document.body.innerHTML += \`<p>\${JSON.stringify(window['__PRERENDER_INJECTED'])}</p>\`
    })
  </script>


<p>{"foo":"bar"}</p></body></html>",
    "originalRoute": "/",
    "route": "/",
  },
]
`;
